# librewards

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
android/: .editorconfig  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: universities.txt
android/app/src/main/res/color/: edit_text_colour.xml  tab_colour.xml
android/app/src/main/res/drawable/: gradient_orange.xml  gradient_tab.xml  gradient_white.xml  layout_bg.xml  points_box.xml  rounded_edges.xml  rounded_shape.xml  rounded_shape_outline.xml  shadow.xml
android/app/src/main/res/layout/: activity_admin.xml  activity_login.xml  activity_main.xml  activity_register.xml  add_product_popup.xml  admin_fragment_home.xml  admin_fragment_rewards.xml  (+8 more)
android/gradle/wrapper/: gradle-wrapper.properties
android/local-admin-server/: README.md  build.gradle
android/local-admin-server/src/main/resources/: application.conf
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: tab_colour.xml
app/src/main/res/drawable/: gradient_orange.xml  gradient_tab.xml  gradient_white.xml  layout_bg.xml  points_box.xml  rounded_bottom.xml  rounded_shape_outline_selected.xml  shadow.xml  text_border.xml
app/src/main/res/layout/: activity_admin.xml  activity_main.xml  activity_register.xml  add_product_popup.xml  admin_fragment_home.xml  card_layout.xml  manage_product_popup.xml  reward_card.xml  simple_spinner_dropdown.xml
app/src/main/res/values/: strings.xml
functions/: README.md
functions/set-admin-auth/: .gitignore  Makefile  README.md  main.py  pyproject.toml
functions/set-admin-auth/scripts/: set-admin.sh
functions/set-admin-auth/src/: main.py
functions/set-admin-auth/tests/: test_main.py
gradle/wrapper/: gradle-wrapper.properties
infra/: .gitignore  .terraform.lock.hcl  README.md  database.rules.json  main.tf  variables.tf
infra/modules/api_keys/: main.tf  outputs.tf  variables.tf
infra/modules/auth/: main.tf
infra/modules/database/: main.tf
infra/modules/functions/: main.tf  variables.tf
infra/modules/github_actions/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf
infra/modules/project/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf
(+151 files in other folders)
