[project]
name = "set_admin_auth"
dynamic = ["version"]
authors = [
  { name="Arman Jalilian", email="arman@example.com" },
]
description = "A GCP Function to allow a super-user to set another user as an admin through auth claims"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "firebase-admin~=7.1",
    "google-cloud-functions~=1.21",
]

[project.urls]
repository = "https://github.com/armjal/librewards"
